Fix Franch text

--- a/app/locales/site.fr.yml
+++ b/app/locales/site.fr.yml
@@ -14,7 +14,7 @@ home:
 
     sub1:
         title: Emails
-        text: Le résultat peut être envoyé par email à vous et toute personne que vous le souhaitez.
+        text: Le résultat peut être envoyé par email à vous et à toutes personnes que vous souhaitez.
 
     sub2:
         title: Open source
